force-app/main/default/objects/Payment__c.object
<CustomObject>
    <description>Payment for pledges or gifts.</description>
    <fields>
        <fullName>Amount_Ex_GST__c</fullName>
        <formula>Payment_Amount__c - GST_Allocation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Ex GST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Course_Preference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Course Preference</label>
        <referenceTo>Application_Course_Preference__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booking_ID__c</fullName>
        <description>This is the SFID used in shop.monash API</description>
        <formula>CASESAFEID(Id)</formula>
        <inlineHelpText>This is the reference ID used to send payment record details to shop.monash</inlineHelpText>
        <label>Booking ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>Contact__r.Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Centre__c</fullName>
        <label>Cost Centre</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <formula>Course_Offering__r.Course__r.Name</formula>
        <label>Course Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Faculty__c</fullName>
        <description>Created for PD sharing and populated by a process builder.</description>
        <label>Course Faculty</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Offering__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Course Offering</label>
        <referenceTo>Course_Offering__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Title__c</fullName>
        <formula>Course_Offering__r.Course__r.Course_Description__c</formula>
        <label>Course Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Type__c</fullName>
        <description>Created for PD sharing and populated by a process builder.</description>
        <label>Course Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Expiry_Month__c</fullName>
        <label>Credit Card Expiry Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Card_Expiry_Year__c</fullName>
        <label>Credit Card Expiry Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Card_Name__c</fullName>
        <label>Credit Card Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>MasterCard</fullName>
                </value>
                <value>
                    <fullName>American Express</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_receipt_sent__c</fullName>
        <description>Updated by Conga Workflow</description>
        <label>Date receipt sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <label>Fund</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GST_Allocation__c</fullName>
        <label>GST Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legacy_Application_ID__c</fullName>
        <label>Legacy Application ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Credit_Card_Expiry__c</fullName>
        <label>Legacy Credit Card Expiry</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Payment_ID__c</fullName>
        <label>Legacy Payment ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MagentoURL__c</fullName>
        <label>MagentoURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Online_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use to distinguish if the registration was coming from the portal or offline.</description>
        <inlineHelpText>Use to distinguish if the registration was coming from the portal or offline.</inlineHelpText>
        <label>Online Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_ID__c</fullName>
        <inlineHelpText>Shop.monash Order ID</inlineHelpText>
        <label>Order ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation_ABN__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Please do not enter any spaces between numbers</inlineHelpText>
        <label>Organisation ABN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation_Contact_Department__c</fullName>
        <label>Organisation Contact Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation_Contact_Email__c</fullName>
        <label>Organisation Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Organisation_Contact_Full_Name__c</fullName>
        <label>Organisation Contact Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation_Contact_Phone__c</fullName>
        <label>Organisation Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Organisation_Country__c</fullName>
        <label>Organisation Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation_Name__c</fullName>
        <label>Organisation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation_Postcode__c</fullName>
        <label>Organisation Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation_State__c</fullName>
        <label>Organisation State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation_Street_Address__c</fullName>
        <label>Organisation Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation_Suburb__c</fullName>
        <label>Organisation Suburb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <description>This will be the record create date. Can populate automatically. Will be used for data migration.</description>
        <label>Payment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_Document_Cheque_MO_PO_Number__c</fullName>
        <label>Payment Document (Cheque/MO/PO) Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Not Processed</fullName>
                    <default>true</default>
                    <label>Not Processed</label>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Refund Processed</fullName>
                </value>
                <value>
                    <fullName>Refund Not Processed</fullName>
                </value>
                <value>
                    <fullName>Refunded</fullName>
                    <isActive>false</isActive>
                    <label>Refunded</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit_Card</fullName>
                    <label>Credit Card</label>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Cost_Centre_Fund</fullName>
                    <label>Cost Centre &amp; Fund</label>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Money_Order</fullName>
                    <label>Money Order</label>
                </value>
                <value>
                    <fullName>Purchase_Order</fullName>
                    <label>Purchase Order</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processor_Status__c</fullName>
        <inlineHelpText>Shop.monash transaction status</inlineHelpText>
        <label>Processor Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
                <value>
                    <fullName>paid</fullName>
                </value>
                <value>
                    <fullName>removed</fullName>
                </value>
                <value>
                    <fullName>expired</fullName>
                </value>
                <value>
                    <fullName>refunded</fullName>
                </value>
                <value>
                    <fullName>success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Number of Applicants in bulk registration</description>
        <label>Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Invoice_Number__c</fullName>
        <description>SAP Invoice Number for invoice payments</description>
        <label>SAP Invoice Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Receipt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trigger for the workflow which sends the receipt email</description>
        <label>Send Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suburb__c</fullName>
        <label>Suburb</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Payments</label>
    </listViews>
    <listViews>
        <fullName>All_Payments_Not_Processed</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Contact__c</columns>
        <columns>Course_Code__c</columns>
        <columns>Course_Offering__c</columns>
        <columns>Course_Title__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Send_Receipt__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Payment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payment_Status__c</field>
            <operation>equals</operation>
            <value>Not Processed,Refund Not Processed</value>
        </filters>
        <label>All Payments - Not Processed</label>
    </listViews>
    <listViews>
        <fullName>Todays_Payments</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Course_Code__c</columns>
        <columns>Course_Title__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Todays Payments</label>
    </listViews>
    <nameField>
        <displayFormat>PY-{000000}</displayFormat>
        <label>Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Refund_must_be_a_negative_number</fullName>
        <active>true</active>
        <description>To enforce negative values when the Payment Status is Refund Processed</description>
        <errorConditionFormula>OR(AND(ISPICKVAL(Payment_Status__c,&apos;Refund Processed&apos;), Payment_Amount__c &gt;0),
AND(ISPICKVAL(Payment_Status__c,&apos;Refund Not Processed&apos;),Payment_Amount__c &gt;0))</errorConditionFormula>
        <errorDisplayField>Payment_Amount__c</errorDisplayField>
        <errorMessage>Refund amount must be negative value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Receipt_Fields</fullName>
        <active>true</active>
        <description>Validate receipt fields</description>
        <errorConditionFormula>AND(
Send_Receipt__c ,
OR(
ISBLANK(Quantity__c),
ISBLANK(Payment_Amount__c),
ISPICKVAL(Payment_Type__c,&apos;&apos;)
)
)</errorConditionFormula>
        <errorMessage>The following fields are mandatory when trying to send a receipt : Quantity, Payment Type, Payment Amount</errorMessage>
    </validationRules>
</CustomObject>